// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportInstanceListTest render comment 1`] = `
<div>
  <table
    className="instance-details"
  >
    <tbody>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key"
        >
          Comment
        </th>
        <td
          className="instance-value"
        >
          comment
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ReportInstanceListTest render object prop value instance 1`] = `
<div>
  <table
    className="instance-details"
  >
    <tbody>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-subsection-header"
          colSpan={2}
        >
          key1:
        </th>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key-indented"
        >
          key1&gt;1
        </th>
        <td
          className="instance-value"
        >
          value1&gt;1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ReportInstanceListTest render simple rows first - property bag rows second 1`] = `
<div>
  <table
    className="instance-details"
  >
    <tbody>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-subsection-header"
          colSpan={2}
        >
          Complex Key One:
        </th>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key-indented"
        >
          key1-1
        </th>
        <td
          className="instance-value"
        >
          value1-1
        </td>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key-indented"
        >
          key1-2
        </th>
        <td
          className="instance-value"
        >
          value1-2
        </td>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key"
        >
          Simple Key One
        </th>
        <td
          className="instance-value"
        >
          value1
        </td>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-subsection-header"
          colSpan={2}
        >
          Complex Key Two:
        </th>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key-indented"
        >
          key2-1
        </th>
        <td
          className="instance-value"
        >
          value2-1
        </td>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key-indented"
        >
          key2-2
        </th>
        <td
          className="instance-value"
        >
          value2-2
        </td>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key"
        >
          Simple Key Two
        </th>
        <td
          className="instance-value"
        >
          value2
        </td>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-subsection-header"
          colSpan={2}
        >
          Sub Instance Value is null:
        </th>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key-indented"
        >
          key2-1
        </th>
        <td
          className="instance-value"
        >
          -
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ReportInstanceListTest render snippet and path 1`] = `
<div>
  <table
    className="instance-details"
  >
    <tbody>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key"
        >
          Path
        </th>
        <td
          className="instance-value"
        >
          target1
        </td>
      </tr>
      <tr
        className="instance-pair-details"
      >
        <th
          className="instance-key"
        >
          Snippet
        </th>
        <td
          className="instance-value"
        >
          someHtml
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
